# ganji

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: .gitignore
examples/dcgan/ipaexm/: .gitignore  README.md  ganji.toml  stat.ipynb
ganji/: __init__.py  __main__.py  cli.py  freetype_loader.py  gan.py  model.py  project.py
ganji/datasets/: __init__.py  __main__.py  cli.py  codepoints.py  font.py
ganji/dnn/: dcgan.py  wgan.py
ganji/nn/: dcgan.py
ganji/project/: __init__.py  file.py  model.py
scripts/: fmt.py  lint.py  test.py  vet.py
tests/: test_freetype_loader.py
