[tool.poetry]
name = "ganji"
version = "0.1.0"
description = "This kanji does not exist."
authors = ["taskie <t@skie.jp>"]

[tool.poetry.dependencies]
python = "^3.6"
freetype-py = "^2.1.0"
pillow = "^7.1.2"
tensorflow = { version = "^2.2.0", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
coverage = "^5.1"
mypy = "^0.780"
flake8 = "^3.8.3"
black = "^19.10b0"
isort = "^4.3.21"

[tool.poetry.scripts]
ganji = "ganji.cli:main"

[tool.poetry.extras]
tensorflow = ["tensorflow"]

[tool.black]
line-length = 120
target-version = ["py36"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
