[tool.poetry]
name = "ganji"
version = "0.1.0"
description = "This kanji does not exist."
authors = ["taskie <t@skie.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
freetype-py = "^2.1.0"
numpy = "^1.24.2"
pillow = "^9.4.0"
pyserde = "^0.10.4"
torch = { version = "^2.0.0", optional = true }
torchvision = { version = "^0.15.1", optional = true }

[tool.poetry.dev-dependencies]
black = "^23.1.0"
coverage = "^7.2.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.1.1"
pytest = "^7.2.2"

[tool.poetry.scripts]
ganji = "ganji.cli:main"

[tool.poetry.extras]
torch = ["torch", "torchvision"]

[tool.black]
line-length = 120
target-version = ["py39"]

[build-system]
requires = ["poetry>=1.4"]
build-backend = "poetry.masonry.api"
